--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Send us feedback, or anything else below.</p>
+							<p>Send us feedback, or anything else below. Maybe; for sure once I fix the insecure mailto: form action.</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="mailto:web@forms.audio" enctype="text/plain">
@@ -111,7 +111,7 @@
 									<ul class="contact">
 										<li>
 											<h3>Email</h3>
-											<a href="web@forms.audio">web@forms.audio</a>
+											<a href="mailto:web@forms.audio">web@forms.audio</a>
 										</li>
 										<li>
 											<h3>Social</h3>
