add reference to AudioForms app page

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									<h2>About the project</h2>
 									<p>Make and respond to forms without touching a thing. Good for busy hands or natural interaction. <br/> Short concept video coming soon.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="http://forms.audio/AudioForms/" class="button">See the in-progress Site</a></li>
 									</ul>
 								</div>
 							</div>
