add more references

--- a/index.html
+++ b/index.html
@@ -71,6 +71,16 @@
 									<p>A collection of repositories holding relevant and archival project source.</p>
 								</section>
 								<section>
+									<span class="icon major fa-code"></span>
+									<h3><a href="http://forms.audio/fAudApi">formsaudio api documentation</a></h3>
+									<p>The documentation for fAudApi, the forms Audio API.</p>
+								</section>
+								<section>
+									<span class="icon major fa-code"></span>
+									<h3><a href="http://forms.audio/formsaudio">formsaudio beta page</a></h3>
+									<p>A simple page for testing forms.audio features</p>
+								</section>
+								<section>
 									<span class="icon major fa-user"></span>
 									<h3><a href="http://rbirm.us">rbirm.us</a></h3>
 									<p>Parent page, the personal page of Ryan Birmingham.</p>
