--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 								</section>
 								<section>
 									<span class="icon major fa-code"></span>
-									<h3><a href="http://forms.audio/formsaudio">formsaudio beta page</a></h3>
+									<h3><a href="http://forms.audio/FormsAudio">formsaudio beta page</a></h3>
 									<p>A simple page for testing forms.audio features</p>
 								</section>
 								<section>
