--- a/index.html
+++ b/index.html
@@ -96,27 +96,8 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Send us feedback, or anything else below. Maybe; for sure once I fix the insecure mailto: form action.</p>
+							<p>Send us feedback, or anything else below.</p>
 							<div class="split style1">
-								<section>
-									<form method="post" action="mailto:web@forms.audio" enctype="text/plain">
-										<div class="field half first">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="5"></textarea>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>
 								<section>
 									<ul class="contact">
 										<li>
