--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>FormsAudio - Coming Soon</title>
+		<title>FormsAudio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -37,6 +37,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>FormsAudio</h1>
+							<img src="images/logo_transparent.png" style="width:100%;max-width:600px;"/>
 							<p>A coming <a href="http://rbirm.us">rbirm.us</a> project in UI/UX with accessibility and the medical field in mind.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
